# ai-decision-router

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: medium.json  quick.json
examples/: router.toml
src/ai_decision_router/: __init__.py  adapters.py  benchmark.py  classifier.py  cli.py  config.py  models.py  policies.py  router.py  tracing.py
src/pydantic/: __init__.py
src/typer/: __init__.py  testing.py
tests/: test_benchmark.py  test_classifier.py  test_cli.py  test_config.py  test_policies.py  test_tracing.py
