[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-decision-router"
version = "0.1.0"
description = "LLM routing framework that selects the best model per task for quality, latency, and cost"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Open Source Contributors"}]
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
]

[project.scripts]
router = "ai_decision_router.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
